MainWrapper comp swapped throughout app to avoid duplication everywhere with wrapping elements

--- a/client/src/components/layout/main-wrapper/MainWrapper.css
+++ b/client/src/components/layout/main-wrapper/MainWrapper.css
@@ -1,4 +1,4 @@
-.auth-main-wrapper {
+.main-page-wrapper {
     width: var(--base-container-width);
     margin: 0 auto;
 }
