--- a/client/src/components/pages/shop/Shop.css
+++ b/client/src/components/pages/shop/Shop.css
@@ -1,8 +1,3 @@
-.shop-main-wrapper {
-    width: var(--base-container-width);
-    margin: 0 auto;
-}
-
 .shop-inner-wrapper {
     padding: 3rem 0;
     width: 90%;
